# soul-base

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
config/: gateway.local.toml
crates/soulbase-auth/: Cargo.toml
crates/soulbase-auth/src/: lib.rs  observe.rs  prelude.rs  util.rs
crates/soulbase-auth/src/attr/: mod.rs
crates/soulbase-auth/src/authn/: mod.rs
crates/soulbase-auth/src/authn/oidc/: mod.rs  provider.rs
crates/soulbase-auth/src/cache/: mod.rs
crates/soulbase-auth/src/consent/: mod.rs  store.rs  surreal.rs
crates/soulbase-auth/src/pdp/: local.rs  mod.rs  policy.rs
crates/soulbase-auth/src/quota/: memory.rs  mod.rs  store.rs  surreal.rs
crates/soulbase-auth/tests/: surreal.rs
crates/soulbase-blob/: Cargo.toml
crates/soulbase-blob/src/: metrics.rs
crates/soulbase-blob/src/fs/: mod.rs  presign.rs
crates/soulbase-blob/src/s3/: mod.rs
crates/soulbase-blob/tests/: s3.rs
crates/soulbase-cache/: Cargo.toml  README.md
crates/soulbase-cache/src/: lib.rs  metrics.rs  prelude.rs
crates/soulbase-cache/src/layer/: local_lru.rs  mod.rs  mod_.rs  redis.rs
crates/soulbase-cache/tests/: prometheus.rs
crates/soulbase-config/: Cargo.toml  README.md
crates/soulbase-config/src/: access.rs  audit.rs  catalog.rs  errors.rs  lib.rs  loader.rs  model.rs  prelude.rs  schema.rs  snapshot.rs  validate.rs
crates/soulbase-config/src/secrets/: mod.rs
crates/soulbase-config/src/source/: cli.rs  env.rs  file.rs  memory.rs  mod.rs  remote.rs
crates/soulbase-config/tests/: basic.rs  catalog.rs  watch.rs
crates/soulbase-crypto/: Cargo.toml  README.md
crates/soulbase-crypto/src/: lib.rs  metrics.rs  prelude.rs
crates/soulbase-crypto/tests/: basic.rs
crates/soulbase-errors/src/: code.rs  lib.rs  mapping_http.rs  prelude.rs  render.rs  retry.rs  wrap.rs
crates/soulbase-gateway/: Cargo.toml
crates/soulbase-gateway/src/: main.rs
crates/soulbase-gateway/tests/: gateway_contracts.rs  gateway_perf.rs  harness.rs
crates/soulbase-infra/: Cargo.toml  README.md
crates/soulbase-infra/src/: blob.rs  cache.rs  config.rs  errors.rs  lib.rs  queue.rs
crates/soulbase-interceptors/: Cargo.toml
crates/soulbase-interceptors/src/: context.rs  lib.rs  observe.rs  prelude.rs
crates/soulbase-interceptors/src/adapters/: grpc.rs  http.rs  mod.rs
crates/soulbase-interceptors/src/idempotency/: memory.rs  mod.rs
crates/soulbase-interceptors/src/policy/: dsl.rs  mod.rs  model.rs
crates/soulbase-interceptors/src/stages/: authn_map.rs  authz_quota.rs  mod.rs  response_stamp.rs  route_policy.rs  tenant_guard.rs
crates/soulbase-interceptors/tests/: basic.rs
crates/soulbase-llm/: Cargo.toml  README.md
crates/soulbase-llm-service/: Cargo.toml
crates/soulbase-llm-service/src/: main.rs
crates/soulbase-llm/examples/: openai_chat.rs
crates/soulbase-llm/src/: chat.rs  cost.rs  errors.rs  lib.rs  prelude.rs  provider.rs
crates/soulbase-llm/src/provider/: openai.rs
crates/soulbase-llm/src/provider/claude/: mod.rs
crates/soulbase-llm/src/provider/gemini/: mod.rs
crates/soulbase-llm/src/service/: infra.rs  mod.rs  outbox.rs  runtime.rs
crates/soulbase-net/: Cargo.toml  README.md
crates/soulbase-net/src/: client.rs  errors.rs  metrics.rs  policy.rs  prelude.rs  types.rs
crates/soulbase-net/src/interceptors/: authz.rs  mod.rs  observe.rs  rate_limit.rs  sign.rs
crates/soulbase-net/src/runtime/: cbreaker.rs  retry.rs
crates/soulbase-net/tests/: e2e.rs  prometheus.rs
crates/soulbase-observe/: Cargo.toml
crates/soulbase-observe/src/: prelude.rs
crates/soulbase-observe/src/export/: kafka.rs  logs_http.rs  mod.rs  otlp.rs  prometheus.rs  stdout.rs
crates/soulbase-observe/src/pipeline/: router.rs
crates/soulbase-observe/src/sdk/: hub.rs  metrics.rs  mod.rs
crates/soulbase-observe/tests/: prometheus.rs
crates/soulbase-sandbox/: Cargo.toml
crates/soulbase-sandbox/src/: budget.rs  errors.rs  evidence.rs  guard.rs  lib.rs  model.rs  observe.rs  prelude.rs  profile.rs
crates/soulbase-sandbox/src/exec/: fs.rs  mod.rs  net.rs  proc.rs  telemetry.rs
crates/soulbase-sandbox/tests/: basic.rs
crates/soulbase-storage/: Cargo.toml  README.md
crates/soulbase-storage/src/: errors.rs  lib.rs  model.rs  observe.rs  prelude.rs
crates/soulbase-storage/src/mock/: datastore.rs  graph.rs  migrate.rs  mod.rs  repo.rs  search.rs  session.rs  tx.rs  vector.rs
crates/soulbase-storage/src/model/: autonomous.rs  awareness.rs  causal.rs  dfr.rs  embedding.rs  evolution.rs  metacognition.rs  recall.rs  timeline.rs  timeseries.rs  vector_manifest.rs
crates/soulbase-storage/src/spi/: datastore.rs  graph.rs  health.rs  migrate.rs  query.rs  repo.rs  search.rs  session.rs  tx.rs  vector.rs
crates/soulbase-storage/src/surreal/: binder.rs  config.rs  datastore.rs  errors.rs  mapper.rs  migrate.rs  mod.rs  observe.rs  realtime.rs  repo.rs  schema.rs  session.rs  spatial.rs  stub.rs  timeseries.rs  tx.rs  vector.rs
crates/soulbase-storage/tests/: basic.rs  surreal_mem.rs  surreal_repo.rs  surreal_schema.rs
crates/soulbase-tools/: Cargo.toml
crates/soulbase-tools/src/: errors.rs  events.rs  invoker.rs  mapping.rs  observe.rs  preflight.rs  prelude.rs  registry.rs
crates/soulbase-tools/tests/: basic.rs
crates/soulbase-tx/: Cargo.toml  README.md
crates/soulbase-tx/src/: backoff.rs  idempo.rs  model.rs  outbox.rs  prelude.rs  replay.rs  saga.rs
crates/soulbase-tx/src/memory/: dead_store.rs  idempo_store.rs  outbox_store.rs
crates/soulbase-tx/src/surreal/: mapper.rs  mod.rs  repo.rs  schema.rs
crates/soulbase-tx/tests/: basic.rs  surreal_integration.rs
crates/soulbase-types/: Cargo.toml
crates/soulbase-types/src/: envelope.rs  id.rs  lib.rs  scope.rs  subject.rs  tenant.rs  time.rs  trace.rs  validate.rs
crates/soulbase-types/tests/: basic.rs
deploy/systemd/: soulbase-gateway.service
docs/: runbook.md  running-gateway.md  secrets.md
examples/config/: dev.json
scripts/: run-gateway.sh  start-gateway.sh
target-gateway/debug/.fingerprint/libc-8e5406a56535c6d3/: build-script-build-script-build  (+1 more)
tests/: e2e_pipeline.rs
(+5 files in other folders)
