[workspace]
members = [
    "crates/soulbase-types",
    "crates/soulbase-errors",
    "crates/soulbase-config",
    "crates/soulbase-auth",
    "crates/soulbase-interceptors",
    "crates/soulbase-sandbox",
    "crates/soulbase-llm",
    "crates/soulbase-tools"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
