[package]
name = "soulbase-config"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
description = "Schema-first configuration & secrets layer for the Soul platform."
repository = "https://github.com/RcityHunter/soul-base"
homepage = "https://github.com/RcityHunter/soul-base"
documentation = "https://github.com/RcityHunter/soul-base/tree/main/crates/soulbase-config"

[features]
default = ["schema_json", "yaml", "toml"]
schema_json = ["schemars"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
watch_fs = []
remote_consul = []
remote_etcd = []
remote_s3 = []
remote_git = []
remote_http = ["dep:reqwest"]
secrets_vault = []
secrets_aws_kms = []
secrets_asm = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.17"
schemars = { version = "0.8", optional = true }
thiserror = "1"
async-trait = "0.1"
parking_lot = "0.12"
arc-swap = "1"
sha2 = "0.10"
base64 = "0.22"
percent-encoding = "2"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }

soulbase-types = { path = "../soulbase-types", version = "1.0.0" }
soulbase-errors = { path = "../soulbase-errors", version = "1.0.0" }

[dev-dependencies]
serde_json = "1"
jsonschema = "0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
hyper = { version = "1", features = ["http1", "server"] }
