[package]
name = "soulbase-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
registry_surreal = ["soulbase-tools/registry_surreal"]
idempo_surreal = ["soulbase-tx/surreal"]
provider-openai = ["soulbase-llm/provider-openai"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
soulbase-interceptors = { path = "../soulbase-interceptors", version = "1.0.0", features = ["with-axum"] }
soulbase-auth = { path = "../soulbase-auth", version = "1.0.0" }
soulbase-errors = { path = "../soulbase-errors", version = "1.0.0" }
soulbase-types = { path = "../soulbase-types", version = "1.0.0" }
async-trait = "0.1"
soulbase-tools = { path = "../soulbase-tools", version = "1.0.0" }
soulbase-storage = { path = "../soulbase-storage", version = "1.0.0", features = ["surreal"] }
soulbase-sandbox = { path = "../soulbase-sandbox", version = "1.0.0" }
soulbase-tx = { path = "../soulbase-tx", version = "1.0.0" }
sha2 = "0.10"
soulbase-llm = { path = "../soulbase-llm", version = "1.0.0" }
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
serial_test = "2"
