[package]
name = "soulbase-infra"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "External infrastructure wiring for Soulbase (cache, blob, queue)."
repository = "https://github.com/RcityHunter/soul-base"

[features]
default = []
redis = ["soulbase-cache/redis"]
s3 = ["soulbase-blob/backend-s3", "dep:aws-config", "dep:aws-sdk-s3"]
kafka = ["dep:rdkafka"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

soulbase-config = { path = "../soulbase-config", version = "1.0.0" }
soulbase-cache = { path = "../soulbase-cache", version = "1.0.0" }
soulbase-blob = { path = "../soulbase-blob", version = "1.0.0" }
soulbase-tx = { path = "../soulbase-tx", version = "1.0.0" }
soulbase-errors = { path = "../soulbase-errors", version = "1.0.0" }
soulbase-types = { path = "../soulbase-types", version = "1.0.0" }

aws-config = { version = "1", optional = true, default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
rdkafka = { version = "0.36", optional = true, features = ["tokio"] }
