[package]
name = "soulbase-llm"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Provider-agnostic LLM SPI (Chat/Stream/Embeddings/Rerank) for the Soul platform"
repository = "https://github.com/RcityHunter/soul-base"

[features]
default = []
schema_json = ["schemars"]
provider-local = []
provider-openai = ["dep:reqwest", "dep:async-stream", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
futures-core = "0.3"
futures-util = "0.3"
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
async-stream = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

# internal crates
soulbase-types = { path = "../soulbase-types", version = "1.0.0" }
soulbase-errors = { path = "../soulbase-errors", version = "1.0.0" }
soulbase-tools = { path = "../soulbase-tools", version = "1.0.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
wiremock = "0.6"
