[package]
name = "soulbase-llm"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Provider-agnostic LLM SPI (Chat/Stream/Embeddings/Rerank) for the Soul platform"
repository = "https://github.com/RcityHunter/soul-base"

[features]
default = []
schema_json = ["schemars"]
provider-local = []
provider-openai = ["dep:reqwest", "dep:async-stream", "dep:tokio"]
provider-gemini = ["dep:reqwest", "dep:tokio"]
service = [
    "dep:axum",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:anyhow",
    "dep:soulbase-auth",
    "dep:soulbase-interceptors",
    "dep:soulbase-observe",
    "dep:soulbase-sandbox",
    "dep:tokio",
    "dep:async-stream"
]

provider-claude = ["dep:reqwest", "dep:async-stream", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
futures-core = "0.3"
futures-util = "0.3"
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
async-stream = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "signal"], optional = true }
axum = { version = "0.7", features = ["macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
anyhow = { version = "1", optional = true }
jsonschema = "0.17"
chrono = { version = "0.4", features = ["clock", "serde"], optional = false }
bytes = "1"

soulbase-auth = { path = "../soulbase-auth", version = "1.0.0", optional = true }
soulbase-interceptors = { path = "../soulbase-interceptors", version = "1.0.0", features = ["with-axum"], optional = true }
soulbase-observe = { path = "../soulbase-observe", version = "1.0.0", optional = true }
soulbase-sandbox = { path = "../soulbase-sandbox", version = "1.0.0", optional = true }

# internal crates
soulbase-types = { path = "../soulbase-types", version = "1.0.0" }
soulbase-errors = { path = "../soulbase-errors", version = "1.0.0" }
soulbase-tools = { path = "../soulbase-tools", version = "1.0.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "soulbase-llm-service"
path = "src/bin/llm-service.rs"
required-features = ["service"]
