[package]
name = "soulbase-storage"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Storage SPI + adapters (Mock, SurrealDB) for the Soul platform"
repository = "https://github.com/RcityHunter/soul-base"

[features]
default = ["mock"]
mock = []
surreal = []
vector = []
fulltext = []
migrate = []
pool = []
qos = []
observe = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
ahash = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

soulbase-types = { path = "../soulbase-types", version = "1.0.0" }
soulbase-errors = { path = "../soulbase-errors", version = "1.0.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
