[package]
name = "soulbase-types"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Data contract primitives for the Soul platform (IDs, Subject, Scope, Consent, Envelope...)."
repository = "https://example.com/soul-base"

[features]
schema = ["schemars"]
serde_borrow = []
uuid = ["dep:uuid"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
semver = "1"
schemars = { version = "0.8", optional = true, features = ["serde_json"] }
uuid = { version = "1", optional = true, features = ["v4"] }
nanoid = { version = "0.4", features = ["macro"] }

[dev-dependencies]
serde_json = "1"
